--- a/app/src/styles/popup.less
+++ b/app/src/styles/popup.less
@@ -73,8 +73,32 @@
 		top: 7px;
 		height: 30px;
 		width: 30px;
-		background-color: #a22;
 		cursor: pointer;
+
+		&:hover::before,
+		&:hover::after {
+			background-color: #b00;
+		}
+
+		&::after,
+		&::before {
+			content: '';
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			width: 80%;
+			height: 2px;
+			background-color: #fff;
+			transition: .5s;
+		}
+
+		&::before {
+			transform: translate(-50%, -50%) rotate(45deg);
+		}
+
+		&::after {
+			transform: translate(-50%, -50%) rotate(-45deg);
+		}
 	}
 
 	&__footer {
