--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,19 @@
 {% extends 'base/base.html' %}
 
 {% block title %}Main{% endblock %}
+
+{% block content %}
+<div class="content__body">
+	<div class="column column_big">
+		<div class="card card_center card_no-design">
+			<div class="search">
+				
+			</div>
+		</div>
+		<div class="card card_radius">
+			<div class="card__title">Резюме</div>
+			<div class="card__body" style="min-height: 300px"></div>
+		</div>
+	</div>
+</div>
+{% endblock %}
