--- a/app/src/styles/admin.less
+++ b/app/src/styles/admin.less
@@ -135,94 +135,6 @@
 	}
 }
 
-.column {
-	margin-bottom: 50px;
-
-	&_small {
-		width: 27%;
-
-		&-block {
-			margin-bottom: 10px;
-		}
-	}
-
-	&_medium {
-		width: 72%;
-	}
-
-	&_big {
-		width: 100%;
-	}
-}
-
-.card {
-	margin-top: 10px;
-	width: 100%;
-	height: min-content;
-	padding: 20px;
-	box-sizing: border-box;
-	background-color: #fff;
-	box-shadow: 0 5px 10px rgba(0,0,0,0.15), 0 4px 4px rgba(0,0,0,0.12);
-
-	&__title {
-		text-align: center;
-		font-weight: bold;
-		font-size: 28px;
-		letter-spacing: 3px;
-		color: #4a4a4a;
-		margin-bottom: 20px;
-		line-height: 40px;
-		border-bottom: 2px solid #D3D3D3FF;
-		width: 100%;
-	}
-
-	&__body {
-		margin-top: 50px;
-		width: 70%;
-	}
-
-	&_radius {
-		border-radius: 10px;
-	}
-
-	&_center {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-	}
-
-	&_align-center {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-	}
-
-	&_margin {
-		margin-bottom: 20px;
-	}
-
-	&_flex {
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		justify-content: flex-start;
-	}
-
-	&_no-padding {
-		padding: 20px 0;
-
-		.resume__subtitle {
-			padding-left: 20px;
-		}
-	}
-
-	&_no-design {
-		background-color: transparent;
-		box-shadow: none;
-	}
-}
-
 .about-us-block {
 	width: 80%;
 	margin: auto;
@@ -231,5 +143,26 @@
 	&__text {
 		font-size: 16px;
 		line-height: 28px;
+	}
+}
+
+.section-body {
+
+	&__title {
+		font-size: 22px;
+		margin-bottom: 10px;
+
+		&_center {
+			text-align: center;
+		}
+	}
+
+	&__text {
+		font-size: 16px;
+		line-height: 30px;
+
+		&_center {
+			text-align: center;
+		}
 	}
 }
