--- a/app/src/styles/edit_profile.less
+++ b/app/src/styles/edit_profile.less
@@ -216,6 +216,7 @@
 		border-radius: 10px 10px 0 0;
 		position: relative;
 		height: 50px;
+		box-shadow: 0 3px 6px rgba(0,0,0,0.15), 0 2px 2px rgba(0,0,0,0.12);
 
 		&_action {
 			position: absolute;
@@ -262,23 +263,3 @@
 	}
 }
 
-.section-body {
-
-	&__title {
-		font-size: 22px;
-		margin-bottom: 10px;
-
-		&_center {
-			text-align: center;
-		}
-	}
-
-	&__text {
-		font-size: 16px;
-		line-height: 30px;
-
-		&_center {
-			text-align: center;
-		}
-	}
-}
