--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,18 +2,44 @@
 
 {% block title %}Main{% endblock %}
 
+{% block links %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+{% endblock %}
+
+{% set list_users = Mage().get_list_users() %}
+
 {% block content %}
 <div class="content__body">
 	<div class="column column_big">
 		<div class="card card_center card_no-design">
-			<div class="search">
-				
+			<div class="search"></div>
+		</div>
+		{% if list_users %}
+		<div class="card card_radius card_center">
+			<h2 class="card__title">Доступные резюме</h2>
+			<div class="card__body" style="min-height: 300px">
+				{% for user in list_users %}
+				<a href="{{ url_for('user_profile', path=user.get('path')) }}"
+					class="user-list__item">
+						<div class="user__info">
+							<p class="user__info_item">
+								<span class="user__info_item-name">Имя</span>
+								{{ user.get('name') }}
+							</p>
+						</div>
+						<div class="user__photo">
+							<div class="user__photo_image"></div>
+						</div>
+					</a>
+				{% endfor %}
 			</div>
 		</div>
-		<div class="card card_radius">
-			<div class="card__title">Резюме</div>
-			<div class="card__body" style="min-height: 300px"></div>
+		{% else %}
+		<div class="card card_no-design">
+			<h2 class="card__title">В данный момент резюме не найдены</h2>
+			<p class="card__text">Вы можете стать первым!!!</p>
 		</div>
+		{% endif %}
 	</div>
 </div>
 {% endblock %}
