add start page!

--- a/app/templates/base/card.html
+++ b/app/templates/base/card.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="card">
+<div class="card" style="padding: 0">
 	<h2 class="card__title">{{ cardTitle }}</h2>
 	<div class="card__content">
 		{% block card %}{% endblock %}
