--- a/app/src/styles/index.less
+++ b/app/src/styles/index.less
@@ -5,8 +5,11 @@
 		width: 100%;
 		display: block;
 		box-shadow: 0 3px 6px rgba(0,0,0,0.15), 0 2px 2px rgba(0,0,0,0.12);
-		display: flex;
+		display: flex!important;
 		justify-content: space-between;
+		align-items: center;
+		text-decoration: none;
+		margin-bottom: 20px;
 	}
 }
 
@@ -15,7 +18,27 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		flex-wrap: wrap;
 
+		&_item {
+			margin-bottom: 10px;
+			padding-left: 20px;
+			color: #222;
+			font-size: 18px;
+			font-weight: bold;
+			width: 100%;
+		}
+
+		&_item-name {
+			color: #ddd;
+			text-decoration: underline;
+			font-size: 16px;
+
+			&::after {
+				content: ':';
+				margin-right: 10px;
+			}
+		}
 	}
 
 	&__photo {
@@ -32,4 +55,28 @@
 			border-radius: 50%;
 		}
 	}
+
+	&__register {
+		margin-top: 30px;
+		background-color: @color_blue;
+		transition: .5s;
+		width: 200px;
+		height: 50px;
+		color: #fff;
+		margin-bottom: 20px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-radius: 10px;
+		border: none;
+		cursor: pointer;
+		outline: none;
+		text-decoration: none;
+	}
+}
+
+.banner {
+	width: 100%;
+	height: 500px;
+	background-color: #999;
 }
