--- a/app/src/styles/main.less
+++ b/app/src/styles/main.less
@@ -153,7 +153,7 @@ input:-webkit-autofill:active {
 				left: 50%;
 				width: 80%;
 				height: 2px;
-				background-color: #222;
+				background-color: #fff;
 				transition: .5s;
 			}
 
