--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
 
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/Ordinem100.ico') }}" type="image/x-icon">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     {% block links %}{% endblock %}
 
