--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
 							</p>
 							<p class="user__info_item">
 								<span class="user__info_item-name">Профессия</span>
-								{{ user.get('profession_name') or '-' }}
+								{{ user.get('profession') or '-' }}
 							</p>
 						</div>
 						<div class="user__photo">
